--- a/public/assets/css/templatemo-style.css
+++ b/public/assets/css/templatemo-style.css
@@ -558,6 +558,7 @@ section.sign-up {
     border: 1px solid #fff;
 }
 
+
 .sign-up input {
     margin-right: -30px;
     height: 44px;
@@ -568,6 +569,54 @@ section.sign-up {
     outline: none!important;
 }
 
+
+.txt-center {
+    text-align: center;
+  }
+  .hide {
+    display: none;
+  }
+  
+  .clear {
+    float: none;
+    clear: both;
+  }
+  
+  .rating {
+      width: 90px;
+      unicode-bidi: bidi-override;
+      direction: rtl;
+      text-align: center;
+      position: relative;
+  }
+  
+  .rating > label {
+      float: right;
+      display: inline;
+      padding: 0;
+      margin: 0;
+      position: relative;
+      width: 1.1em;
+      cursor: pointer;
+      color: #000;
+  }
+  
+  .rating > label:hover,
+  .rating > label:hover ~ label,
+  .rating > input.radio-btn:checked ~ label {
+      color: transparent;
+  }
+  
+  .rating > label:hover:before,
+  .rating > label:hover ~ label:before,
+  .rating > input.radio-btn:checked ~ label:before,
+  .rating > input.radio-btn:checked ~ label:before {
+      content: "\2605";
+      position: absolute;
+      left: 0;
+      color: #FFD700;
+  }
+  
 footer {
     background-color: #363e50;
     line-height: 130px;
